<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.octri.notification</groupId>
	<artifactId>notification_lib</artifactId>
	<packaging>jar</packaging>
	<version>0.3.1-SNAPSHOT</version>
	<name>notification_lib</name>
	<description>OCTRI Notification Library</description>
	<url>https://github.com/OHSU-OCTRI/notification-lib</url>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.6</version>
		<relativePath />
		<!-- lookup parent from repository -->
	</parent>

	<licenses>
		<license>
			<name>The 3-Clause BSD License</name>
			<url>https://opensource.org/license/bsd-3-clause</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>OCTRI Innovation Core</name>
			<email>octri-devops@ohsu.edu</email>
			<organization>Oregon Clinical &amp; Translational Research Institute (OCTRI)</organization>
			<organizationUrl>https://www.ohsu.edu/octri</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://github.com/OHSU-OCTRI/notification-lib.git</connection>
		<developerConnection>scm:git:https://github.com/OHSU-OCTRI/notification-lib.git</developerConnection>
		<url>https://github.com/OHSU-OCTRI/notification-lib/tree/main</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<common_lib.version>1.7.1</common_lib.version>
		<messaginglib.version>0.1.0</messaginglib.version>
		<node.version>v22.15.0</node.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub Packages</name>
			<url>https://maven.pkg.github.com/OHSU-OCTRI/notification-lib</url>
		</repository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
  		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.octri.common</groupId>
			<artifactId>common_lib</artifactId>
			<version>${common_lib.version}</version>
		</dependency>
		<dependency>
			<groupId>org.octri.messaging</groupId>
			<artifactId>messaging_lib</artifactId>
			<version>${messaginglib.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.eirslett</groupId>
				<artifactId>frontend-maven-plugin</artifactId>
				<version>1.15.4</version>
				<executions>
					<execution>
						<id>install-node-and-npm</id>
						<goals>
							<goal>install-node-and-npm</goal>
						</goals>
					</execution>
					<execution>
						<id>npm-install</id>
						<goals>
							<goal>npm</goal>
						</goals>
					</execution>
					<execution>
						<id>webpack</id>
						<goals>
							<goal>webpack</goal>
						</goals>
						<configuration>
							<arguments>${webpack.args}</arguments>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<nodeVersion>${node.version}</nodeVersion>
					<installDirectory>target</installDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>ci</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>publish</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.9.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<deploymentName>${project.name} ${project.version}</deploymentName>
							<autoPublish>true</autoPublish>
							<centralSnapshotsUrl>https://central.sonatype.com/repository/maven-snapshots/</centralSnapshotsUrl>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>